# moga-mogate

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
docs/: ARCHITECTURE_SUMMARY.md  COLLECTION_FLOW_DIAGRAM.md  COLLECTION_NFT_EXPLAINED.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIXES_AND_ADDITIONS.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INDEX.md  LAUNCH_GUIDE.md  PDA_OPERATIONS_GUIDE.md  PROGRAM_STRUCTURE.md  QUESTIONS_ANSWERED.md  RAFFLE_OPTIONS.md  REFUND_TICKET_SPEC.md  SIMPLIFIED_FLOW.md  ZK_COMPRESSION_USAGE.md  architecture.md  integrations.md  modularity-proposal.md  moga.md  roadmap.md  usage.md
encrypted-ixs/src/: lib.rs
metadata/: .gitkeep  ALL_RWA_METADATA.md  CREATED_FILES.md  FLIGHT_METADATA_SUMMARY.md  GITHUB_URLS.txt  MINTING_GUIDE.md  README.md  READY_TO_COMMIT.md  SFT_VS_1OF1_EXPLAINED.md  moga-token.json
metadata/collections/: README.md  luxury.json  shared-1of1.json  shared-sft.json  travel-1of1.json  travel-sft.json
metadata/images/: IMAGE_SOURCES.md
metadata/nfts/flights/: 1of1-ana-first-nrt-lhr.json  1of1-credit-10000-first.json  1of1-credit-3000-premium-economy.json  1of1-credit-5000-business.json  1of1-emirates-first-dxb-jfk.json  1of1-qatar-business-roundtrip.json  1of1-singapore-suites-sin-lax.json  METADATA_INDEX.md  README.md  sft-business-roundtrip-europe.json  sft-business-transatlantic.json  sft-credit-2000-southeast-asia.json  sft-credit-500-any.json  sft-credit-8000-business.json  sft-economy-asia-exclude-china.json  sft-economy-domestic-indonesia.json  sft-economy-exclude-usa-china.json  sft-first-class-15000.json  sft-first-class-middle-east.json  sft-premium-economy-usa.json
metadata/nfts/hotels/: 1of1-burj-al-arab-royal-suite.json  1of1-four-seasons-maldives-7nights.json  sft-credit-1000-any.json  sft-credit-5000-luxury.json
metadata/nfts/luxury/: 1of1-diamond-necklace-5ct.json  1of1-hermes-birkin-35.json  1of1-patek-philippe-nautilus.json  1of1-rolex-daytona-platinum.json
offchain/: README.md  api_server.ts  organizer_db.ts  package.json  permit_example.ts  worker.ts
offchain/backend/: .env.example  package.json
offchain/backend/src/: index.ts
offchain/sdk/: package.json
offchain/sdk/src/: index.ts
offchain/worker/: package.json
offchain/worker/src/: index.ts
programs/direct_sell/: Cargo.toml
programs/direct_sell/src/: lib.rs
programs/direct_sell_anchor/: Cargo.toml
programs/direct_sell_anchor/src/: lib.rs
programs/rwa_raffle/: Cargo.toml
programs/rwa_raffle/src/: lib.rs
programs/rwa_redeem/: Cargo.toml
programs/rwa_redeem/src/: lib.rs
scripts/: 1-deploy-moga-token.ts  1b-add-token-metadata-github.ts  1b-add-token-metadata-simple.ts  1b-add-token-metadata.ts  2-create-prize-collection.ts  2b-mint-collection-nfts.ts  3-delegate-collection-authority.ts  4-create-mrft-collection.ts  5-delegate-mrft-authority.ts  6-setup-stablecoins.ts  7-deploy-programs.ts  8-test-programs.ts  9-deploy-moga-plus.ts  COMPLETE_GUIDE.md  README.md  SUMMARY.md  delegate-collection-authority.ts
scripts/fee-admin/: 1-initialize-config.ts  2-update-config.ts  3-withdraw-fees.ts  4-view-config.ts  GETTING_STARTED.md  QUICK_REFERENCE.md  README.md  example-buy-with-fees.ts
ts-sdk/: README.md  package.json
ts-sdk/docs/: DEVNET_SETUP.md  README.md
ts-sdk/src/: index.ts  raffle.ts  rwa.ts  solanaKit.ts  tickets.ts  tokens.ts
ts-sdk/tests/: devnet.test.ts
