[workspace]
members = [
  "programs/rwa_raffle",
  "programs/direct_sell",
  "programs/direct_sell_anchor",  # Anchor IDL-compatible variant
  "programs/rwa_redeem",
  # "encrypted-ixs",  # Disabled - requires nightly Rust for arcis-interpreter
]
resolver = "2"

[profile.release]
overflow-checks = true

[workspace.package]
edition = "2021"
