[package]
name = "direct_sell_anchor"
version = "0.1.0"
edition = "2021"
description = "Direct NFT sales with MOGA/USDC payment (Anchor IDL compatible)"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "direct_sell_anchor"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []  # Pyth-jupiter disabled due to toolchain issues
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-bypass = []  # Bypass permit checks for testing
pyth-jupiter = ["dep:pyth-sdk-solana"]  # Pyth oracle + Jupiter swap (disabled by default for IDL)

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
pyth-sdk-solana = { version = "0.9", optional = true }
