[package]
name = "rwa_raffle"
version = "0.1.0"
edition = "2021"
description = "RWA raffle Anchor program"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_raffle"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token", "token-2022", "associated-token"] }
arcium-client = { version = "0.3.0", default-features = false }
arcium-macros = { version = "0.3.0" }
arcium-anchor = { version = "0.3.0" }
light-sdk = { version = "0.16.0", features = ["anchor"] }
light-hasher = { version = "5.0.0", features = ["solana"] }
