[package]
name = "rwa_raffle"
version = "0.1.0"
edition = "2021"
description = "RWA raffle Anchor program"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_raffle"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
pyth-jupiter = ["dep:pyth-sdk-solana"]  # Feature flag for Pyth + Jupiter integration
bubblegum = []  # Temporarily stubbed; deps removed to avoid Solana 1.16 zeroize conflict
arcium = []  # Feature flag for Arcium encrypted computation (requires compiled .arcis files)

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
arcium-client = { version = "0.3.0", default-features = false }
arcium-macros = { version = "0.3.0" }
arcium-anchor = { version = "0.3.0" }
# Temporarily commented out - incompatible with rustc 1.79.0
# light-sdk = { version = "0.16.0", features = ["anchor"] }
# light-hasher = { version = "5.0.0", features = ["solana"] }

# Optional dependencies (feature-gated)
pyth-sdk-solana = { version = "0.10.0", optional = true }
